--- a/server/views/common/head.ejs
+++ b/server/views/common/head.ejs
@@ -1,15 +1,16 @@
 <head>
     <title>Conference API</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../../../public/bower_components/responsiveboilerplate/css/responsiveboilerplate.min.css">
-    <link rel="stylesheet" href="../../../public/bower_components/purecss/src/base/css/base.css">
-    <link rel="stylesheet" href="../../../public/bower_components/purecss/src/buttons/css/buttons.css">
-    <link rel="stylesheet" href="../../../public/bower_components/purecss/src/buttons/css/buttons-core.css">
-    <link rel="stylesheet" href="../../../public/bower_components/purecss/src/forms/css/forms.css">
-    <link rel="stylesheet" href="../../../public/bower_components/purecss/src/menus/css/menus.css">
-    <link rel="stylesheet" href="../../../public/bower_components/purecss/src/menus/css/menus-core.css">
-    <link rel="stylesheet" href="../../../public/css/marketing.css">
-    <link rel="stylesheet" href="../../../public/css/marketing-old-ie.css">
+    <link rel="stylesheet" href="/bower_components/responsiveboilerplate/css/responsiveboilerplate.min.css">
+    <link rel="stylesheet" href="/bower_components/purecss/src/base/css/base.css">
+    <link rel="stylesheet" href="/bower_components/purecss/src/buttons/css/buttons.css">
+    <link rel="stylesheet" href="/bower_components/purecss/src/buttons/css/buttons-core.css">
+    <link rel="stylesheet" href="/bower_components/purecss/src/forms/css/forms.css">
+    <link rel="stylesheet" href="/bower_components/purecss/src/menus/css/menus.css">
+    <link rel="stylesheet" href="/bower_components/purecss/src/menus/css/menus-core.css">
+    <link rel="stylesheet" href="/css/marketing-old-ie.css">
+    <link rel="stylesheet" href="/css/marketing.css">
+
     <style>
         .container {
             width: 60%;
