--- a/server/views/common/head.ejs
+++ b/server/views/common/head.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/bower_components/purecss/src/forms/css/forms.css">
     <link rel="stylesheet" href="/bower_components/purecss/src/menus/css/menus.css">
     <link rel="stylesheet" href="/bower_components/purecss/src/menus/css/menus-core.css">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <link rel="stylesheet" href="/css/marketing-old-ie.css">
     <link rel="stylesheet" href="/css/marketing.css">
 
