--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,12 +1,13 @@
 <!doctype html>
 <html>
-<head>
-    <title>Conference API</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/bower_components/responsiveboilerplate/css/responsiveboilerplate.min.css">
-    <link rel="stylesheet" href="/bower_components/purecss/build/pure-min.css">
-    <link rel="stylesheet" href="/stylesheets/marketing.css">
-</head>
+<!--<head>-->
+    <!--<title>Conference API</title>-->
+    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">-->
+    <!--<link rel="stylesheet" href="/bower_components/responsiveboilerplate/css/responsiveboilerplate.min.css">-->
+    <!--<link rel="stylesheet" href="/bower_components/purecss/build/pure-min.css">-->
+    <!--<link rel="stylesheet" href="/css/marketing.css">-->
+<!--</head>-->
+<%- include common/head.ejs %>
 <body>
 <div class="header">
     <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
