--- a/server/views/signup.ejs
+++ b/server/views/signup.ejs
@@ -1,24 +1,25 @@
 <!doctype html>
 <html>
-<head>
-    <title>Conference API</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/bower_components/responsiveboilerplate/css/responsiveboilerplate.min.css">
-    <link rel="stylesheet" href="/bower_components/purecss/build/pure-min.css">
-    <link rel="stylesheet" href="/stylesheets/marketing.css">
-    <style>
-        .container {
-            width: 60%;
-            margin: 0 auto;
-            padding-top: 80px;
-        }
-        .alert {
-            color: #fff;
-            padding: 10px;
-            background-color: #ff0000;
-        }
-    </style>
-</head>
+<!--<head>-->
+    <!--<title>Conference API</title>-->
+    <!--<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">-->
+    <!--<link rel="stylesheet" href="/bower_components/responsiveboilerplate/css/responsiveboilerplate.min.css">-->
+    <!--<link rel="stylesheet" href="/bower_components/purecss/build/pure-min.css">-->
+    <!--<link rel="stylesheet" href="/css/marketing.css">-->
+    <!--<style>-->
+        <!--.container {-->
+            <!--width: 60%;-->
+            <!--margin: 0 auto;-->
+            <!--padding-top: 80px;-->
+        <!--}-->
+        <!--.alert {-->
+            <!--color: #fff;-->
+            <!--padding: 10px;-->
+            <!--background-color: #ff0000;-->
+        <!--}-->
+    <!--</style>-->
+<!--</head>-->
+<%- include common/head.ejs %>
 <body>
 <div class="header">
     <div class="home-menu pure-menu pure-menu-open pure-menu-horizontal pure-menu-fixed">
